app-01-run.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app: service-01
  name: service-01
spec:  
  replicas: 1
  selector:
    matchLabels:
      app: service-01
  template:
    metadata:
      labels:
        app: service-01
    spec:      
      containers:
      - name: service-01
        image: php:7-fpm        
        volumeMounts:
        - mountPath: /var/www/html
          name: run-file
        command:
        - bash
        - -c
        - php -S 0.0.0.0:80 index.php
        resources:
          limits:
            cpu: 4000m
            memory: 4Gi
          requests: 
            cpu: 1000m
      volumes:
      - name: run-file
        configMap:
          name: service-01
          items:
            - key: index.php
              path: index.php
---
apiVersion: v1
kind: Service
metadata:
  name: service-01-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: service-01
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:            
  name: service-01
spec:
  ingressClassName: nginx
  rules:
  - host: service-01.trido.website
    http:
      paths:
      - backend:
          service:
            name: service-01-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
